--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,1 @@
-# Django'nun en son sürümünü veya belirli bir sürümünü kullanabilirsiniz.
-django>=4.2,<5.0
-
-# MySQL için gerekli bağımlılık (Veritabanı yönetimi)
-mysqlclient>=2.1  # Alternatif olarak PyMySQL kullanılabilir, fakat mysqlclient önerilir
-
-# Web sunucusu için gunicorn (üretim ortamı için)
-gunicorn>=20.1,<21
-
-# Ortam değişkenlerini yönetmek için django-environ
-django-environ>=0.8,<1.0
-
-# Veritabanı bağlantısı için psycopg2 (PostgreSQL kullanıyorsanız)
-# psycopg2-binary>=2.9,<3.0  # (Bu satırı silin, PostgreSQL kullanmıyorsanız)
-
-# Çeşitli Python modüllerinin eksik olmasını engellemek için
-python-dotenv>=0.20,<1.0
-
-# Web geliştirme için yardımcı kütüphaneler
-django-crispy-forms>=1.11,<2.0  # Formları daha güzel hale getirmek için
-
-# Yükleme ve dosya yönetimi için Pillow (görseller için)
-Pillow>=8.0,<9.0
-
-# Django projesinde API'lar için kullanılabilir, Django REST Framework
-djangorestframework>=3.12,<4.0
-
-# Test kütüphaneleri (geliştirme ortamında)
-pytest>=6.2,<7.0
-pytest-django>=4.4,<5.0
+django
